--- a/main.html
+++ b/main.html
@@ -10,7 +10,42 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<H1>Welcome to Accio Jobs!</H1>
+	<h1>
+	 <a href="https://acciojob.com/blog/">Blog</a>
+	</h1>
+	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
+   <br>
+		<h2>
+		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
+		</h2>
+		<p>
+			<h6><a href="https://acciojob.com/blog/brute-force-vs-optimization/">We can say that optimization is one step further than the brute force method of problem solving...
+			</a></h6>
+		</p>
+		
+		
+<img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
+<br>
+			<h2>
+<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
+			</h2><p>
+<h6><a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA or Competitive programming?What is better for you? Questions suxh as these often put you in a...
+	
+</a></h6></p>
+	
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMad2SULiG6zAe_1muZSzBf6_1ccu49Knl3mx0pJ0nFw&s=10" height="200px">
+		<br><h2>
+		<a href="">Complete Guide on FlexBox</a>
+			</h2>
+	<p>
+		<h6>
+			<a href="">As a job seeker, you may wonder how to make your LinkedIn profile stand out to your recruiters. Your LinkedIn...</a>
+		</h6>
+	</p>
+			
 
+	
 </body>
 
 </html>
