--- a/main.html
+++ b/main.html
@@ -34,13 +34,13 @@
 	
 </a></h6></p>
 	
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMad2SULiG6zAe_1muZSzBf6_1ccu49Knl3mx0pJ0nFw&s=10" height="200px">
+	<img src="https://images.unsplash.com/photo-1616469829581-73993eb86b02?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDJ8fGxpbmtlZGlufGVufDB8fHx8MTY3MDQ5MTYxNw&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
 		<br><h2>
-		<a href="">Complete Guide on FlexBox</a>
+		<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</a>
 			</h2>
 	<p>
 		<h6>
-			<a href="">As a job seeker, you may wonder how to make your LinkedIn profile stand out to your recruiters. Your LinkedIn...</a>
+			<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">As a job seeker, you may wonder how to make your LinkedIn profile stand out to your recruiters. Your LinkedIn...</a>
 		</h6>
 	</p>
 			
