--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<H1>Welcome to Accio Jobs!</H1>
+	<marquee direction="right">Welcome to Accio Jobs!</marquee>
 	<h1>
 	 <a href="https://acciojob.com/blog/">Blog</a>
 	</h1>
