--- a/main.html
+++ b/main.html
@@ -15,8 +15,7 @@
 	 <a href="https://acciojob.com/blog/">Blog</a>
 	</h1>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/">
-	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
-	</a>
+	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height="200px"></a>
 		<br>
 		<h2>
 		<a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a>
@@ -32,19 +31,18 @@
 			<br>
 			<h2>
 <a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a>
-			</h2><p>
+			</h2>
+	<p>
 <h6><a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA or Competitive programming?What is better for you? Questions suxh as these often put you in a...
 	
 </a></h6></p>
-	<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">
-	<img src="https://images.unsplash.com/photo-1616469829581-73993eb86b02?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDJ8fGxpbmtlZGlufGVufDB8fHx8MTY3MDQ5MTYxNw&ixlib=rb-4.0.3&q=80&w=2000" height="200px">
-	</a>
+	<a href="https://acciojob.com/blog/untitled-19/"><img src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png" height="200px"></a>
 		<br><h2>
-		<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">10 Tips to Optimize Your LinkedIn Profile and Attract Recruiters</a>
+		<a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a>
 			</h2>
 	<p>
 		<h6>
-			<a href="https://acciojob.com/blog/10-tips-to-optimize-your-linkedin-profile-and-attract-recruiters/">As a job seeker, you may wonder how to make your LinkedIn profile stand out to your recruiters. Your LinkedIn...</a>
+			<a href="https://acciojob.com/blog/untitled-19/">As a job seeker, you may wonder how to make your LinkedIn profile stand out to your recruiters. Your LinkedIn...</a>
 		</h6>
 	</p>
 			
